[package]
name = "lib_typesense"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = {version="1",features=["derive"]}
serde_json = "1"
my_macros = {path="../my_macros"}
url = "2.3.1"
typesense = {git="https://github.com/typesense/typesense-rust", rev="be945effd06da4677cf6f200ceee28c1c2bd8eb8"}