[package]
name = "lib_typesense"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
chrono = { version = "0.4", features = ["serde"] }
lib_auth_id = { path = "../lib_auth_id" }

lib_wallet = { path = "../lib_wallet" }
macros_create_app = { path = "../macros_create_app" }
macros_make_error = { path = "../macros_make_error" }
macros_make_model = { path = "../macros_make_model" }
macros_make_scope = { path = "../macros_make_scope" }
my_state = { path = "../my_state" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres", "runtime-actix-native-tls","chrono","bigdecimal", "sqlite" ] }

tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }

typesense = { git = "https://github.com/typesense/typesense-rust", rev = "be945effd06da4677cf6f200ceee28c1c2bd8eb8", features = ["tokio-rt"] }
url = "2.3.1"
utoipa = { version = "2", features = ["actix_extras","chrono","json"] }
